# Jni

./: .gitignore  .si.json  Projectgoal.md  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: android-ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  active-lib.cpp  distort_engine.cpp  ink_engine.cpp  native-lib.cpp  shader_loader.cpp  shader_loader.h  vulkan_compute_engine.cpp  vulkan_compute_engine.h
app/src/main/kotlin/com/example/homecil/: HandwritingRenderer.kt  HomeCilApplication.kt  InkStroke.kt  MainActivity.kt  MathRenderer.kt  NativeRenderer.kt  PaperRenderer.kt  PaperView.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-my/: strings.xml
app/src/main/shaders/: capillary_map.comp  ink_blend.comp  ink_composite.comp  ink_physics.comp  paper_generation.comp
gradle/wrapper/: gradle-wrapper.properties
